--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,12 +31,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     // View注入框架
-
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     //PickerView
     compile 'com.contrarywind:Android-PickerView:4.1.7'
+
+    //Android数据库开源框架
+    implementation 'org.litepal.android:core:1.4.1'
 
     compile 'com.airsaid.library:pickerview:1.0.3'
 }
