--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.what2e.eatwhat">
 
     <application
+        android:name=".application.EatWhatApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +21,14 @@
             </intent-filter>
         </activity>
         <activity android:name="com.what2e.eatwhat.MainActivity" />
+        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".SettingActivity"/>
+        <activity android:name=".FeedbackActivity"/>
+        <activity android:name=".ChangeUserInfoActivity"/>
+        <activity android:name=".UserInformationActivity"/>
+
+
     </application>
 
     <!-- Zxing -->
@@ -28,6 +37,7 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
